<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    
    <!-- Написать письмо -->
    <shortcut
        android:shortcutId="compose"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_compose"
        android:shortcutShortLabel="@string/shortcut_compose"
        android:shortcutLongLabel="@string/shortcut_compose_long">
        <intent
            android:action="com.iwo.mailclient.SHORTCUT_COMPOSE"
            android:targetPackage="com.iwo.mailclient"
            android:targetClass="com.iwo.mailclient.MainActivity" />
    </shortcut>
    
    <!-- Входящие -->
    <shortcut
        android:shortcutId="inbox"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_inbox"
        android:shortcutShortLabel="@string/shortcut_inbox"
        android:shortcutLongLabel="@string/shortcut_inbox_long">
        <intent
            android:action="com.iwo.mailclient.SHORTCUT_INBOX"
            android:targetPackage="com.iwo.mailclient"
            android:targetClass="com.iwo.mailclient.MainActivity" />
    </shortcut>
    
    <!-- Поиск -->
    <shortcut
        android:shortcutId="search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="com.iwo.mailclient.SHORTCUT_SEARCH"
            android:targetPackage="com.iwo.mailclient"
            android:targetClass="com.iwo.mailclient.MainActivity" />
    </shortcut>
    
    <!-- Синхронизировать -->
    <shortcut
        android:shortcutId="sync"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_sync"
        android:shortcutShortLabel="@string/shortcut_sync"
        android:shortcutLongLabel="@string/shortcut_sync_long">
        <intent
            android:action="com.iwo.mailclient.SHORTCUT_SYNC"
            android:targetPackage="com.iwo.mailclient"
            android:targetClass="com.iwo.mailclient.MainActivity" />
    </shortcut>
    
</shortcuts>
